# ref-cast

./: .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
compiletest/: Cargo.toml  README.txt  main.rs
compiletest/src/: lib.rs
compiletest/ui/: no-repr.rs  no-repr.stderr
derive/: Cargo.toml
derive/src/: attr.rs  lib.rs  symbols.rs
src/: custom.rs  layout.rs  lib.rs  private.rs  trivial.rs
tests/: compiletest.rs  test_custom.rs  test_private.rs  test_trivial.rs
tests/compile-fail/: no-repr.rs
tests/helper/: Cargo.toml  lib.rs
tests/ui/: cross-crate.rs  cross-crate.stderr  dst-before-trivial.rs  dst-before-trivial.stderr  extra-arg.rs  extra-arg.stderr  function-body.rs  function-body.stderr  impl-trait.rs  impl-trait.stderr  no-custom.rs  no-custom.stderr  no-repr.stderr  not-trivial.stderr  private.rs  private.stderr  repr-align.stderr  short-lifetime.rs  short-lifetime.stderr  unrecognized-attr.rs  unrecognized-attr.stderr  unrecognized-repr.stderr
