[package]
name = "ref-cast"
version = "1.0.8" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Safely cast &T to &U where the struct U contains a single field of type T."
documentation = "https://docs.rs/ref-cast"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/ref-cast"
rust-version = "1.31"

[dependencies]
ref-cast-impl = { version = "=1.0.8", path = "derive" }

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.52", features = ["diff"] }

[workspace]
members = ["derive"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
