[package]
name = "ref-cast"
version = "1.0.17" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
description = "Safely cast &T to &U where the struct U contains a single field of type T."
documentation = "https://docs.rs/ref-cast"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/ref-cast"
rust-version = "1.56"

[dependencies]
ref-cast-impl = { version = "=1.0.17", path = "derive" }

[dev-dependencies]
ref-cast-test-suite = { version = "0", path = "tests/helper" }
rustversion = "1.0"
trybuild = { version = "1.0.52", features = ["diff"] }

[workspace]
members = ["derive", "tests/helper"]

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[patch.crates-io]
ref-cast = { path = "." }
