[package]
name = "ref-cast-impl"
version = "1.0.23"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Derive implementation for ref_cast::RefCast."
documentation = "https://docs.rs/ref-cast"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/ref-cast"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"

[dev-dependencies]
ref-cast = "1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
